--- a/main.html
+++ b/main.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<button onclick= "showKeys">Show Keys</button>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <!-- Button to trigger the showKeys function -->
+    <button onclick="showKeys()">Show Keys</button>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
